# tm1gitpy

./: .gitignore  LICENSE  Makefile  README.md  changes.md  changeset.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tm1gitpy.spec
.cursor/agents/: readme-sync-reviewer.md
.github/workflows/: ci.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  release-binaries.yml
.tm1gitpy/: tm1servers.yaml.template
examples/: docker-compose.yml  filter.txt  settings.yml  tm1project.json  tm1project_filter.txt
plans/: 1.0.0_finalization_plan.md  codebase_inconsistencies_and_refactors.md  main_py_compare_and_apply_cli.md  refactor_eliminate_tm1_bedrock_py.md  refactor_separate_dev_test_dependencies.md  rework_changeset_apply_and_status_tracking.md
test_integration/: __init__.py  conftest.py  docker-compose.yml  exported_changeset.yml  fixture_changeset.json  fixture_changeset.yml  sqlite_teardown.py  test_apply_deployment_hook_operations.py  test_base.py  test_changeset_apply.py  test_create_and_delete.json  test_export.py  test_process_chore_changeset_apply.py  test_ti_atomicity.py  test_ti_crud_integration.py  test_ti_master_orchestrator.py  tm1project.json
test_integration/fixture_model_tm1git/: tm1project.json
test_integration/test_export/: test_changeset_apply.py  test_export.py  test_export_integration.py
tests/: __init__.py  config.py  conftest.py  main.py  test_config.py  test_create_and_delete.json  test_main_filter_loading.py  test_progress_reporting.py  test_unit.py  unit_common.py  utility.py
tests/db/: test_worker_registry.py
tests/internal/: test_process_pool.py
tests/model/: test_chore_crud.py  test_cube_crud.py  test_dimension_crud.py  test_edge_crud.py  test_edge_json_format.py  test_element_crud.py  test_hierarchy_crud.py  test_mdxview_crud.py  test_process_crud.py  test_subset_crud.py  test_subset_json_format.py  test_tm1_project_json.py
tests/services/: test_apply_deployment_hook_operations.py  test_changeset.py  test_comparator.py  test_deserializer.py  test_exporter.py  test_filter.py  test_filter_changeset.py  test_serializer.py
tm1_git_py/: README.md  __init__.py  _worker_db.py  apply.py  changeset.py  changeset_status.py  changeset_store.py  comparator.py  config.py  content_hash_calculator.py  deserializer.py  exporter.py  filter.py  filter.txt  hot_promote_filters.py  hot_promote_navigation.py  hot_promote_selection.py  logging_config.py  main.py  priority_thread_pool_executor.py  process_pool.py  progress_reporting.py  serializer.py  sqlite_worker.py  tm1_to_model.py  validation.py  worker_config.py
tm1_git_py/config/: __init__.py
tm1_git_py/db/: _worker_db.py  changeset_store.py  model_store.py  sqlite_worker.py
tm1_git_py/internal/: content_hash_calculator.py  priority_thread_pool_executor.py  process_pool.py  validation.py  worker_config.py
tm1_git_py/model/: __init__.py  chore.py  cube.py  dimension.py  disk_backed_list.py  edge.py  element.py  hierarchy.py  mdxview.py  model.py  model_store.py  nativeview.py  process.py  rule.py  store_backed_sequence.py  subset.py  task.py  ti.py  tm1_project_json.py  tm1git_json.py
tm1_git_py/reporting/: progress_reporting.py
tm1_git_py/seeder_hotpromote/: __init__.py  hot_promote_filters.py  hot_promote_navigation.py  hot_promote_selection.py
tm1_git_py/services/: apply.py  changeset.py  changeset_status.py  comparator.py  deserializer.py  exporter.py  filter.py  serializer.py  sort_metadata.py
tm1_git_py/tm1_api/: __init__.py  _paginator.py  cube_service.py  dimension_service.py  edge_service.py  element_service.py  hierarchy_service.py  process_service.py  subset_service.py  view_service.py
tm1_git_py/tm1py_ext/: __init__.py  _paginator.py  cube_service_ext.py  dimension_service_ext.py  edge_service_ext.py  element_service_ext.py  (+4 more)
(+427 files in other folders)
