[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm1gitpy"
version = "0.1.0"
description = "Utilities for exporting and comparing TM1 models for Git workflows."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "TM1py>=2.1,<3.0",
    "requests>=2.25",
    "tm1_bedrock_py>=0.4.1",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"tm1_git_py" = ["*.txt", "*.json"]
