[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm1gitpy"
dynamic = ["version"]
description = "Utilities for exporting and comparing TM1 models for Git workflows."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "KnowledgeSeed" },
]
keywords = ["tm1", "ibm-planning-analytics", "model-export", "devops", "git", "version-control"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "TM1py>=2.1,<3.0",
    "requests>=2.25",
    "PyYAML>=6.0",
    "orjson",
    "ijson",
    "cffi",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/KnowledgeSeed/tm1_git_py"
Repository = "https://github.com/KnowledgeSeed/tm1_git_py"
Issues = "https://github.com/KnowledgeSeed/tm1_git_py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "testcontainers>=4.0.0",
    "orjson",
    "ijson",
    "cffi",
    "tqdm",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"tm1_git_py" = ["*.txt", "*.json"]
