[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm1gitpy"
dynamic = ["version"]
description = "Utilities for exporting and comparing TM1 models for Git workflows."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "KnowledgeSeed" },
]
keywords = ["tm1", "ibm-planning-analytics", "model-export", "devops", "git", "version-control"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "TM1py>=2.1,<3.0",
    "requests>=2.25",
    "PyYAML>=6.0",
    "orjson",
    "ijson",
    "cffi",
    "tqdm",
]

[project.scripts]
tm1gitpy = "tm1_git_py.main:main"

[project.urls]
Homepage = "https://github.com/KnowledgeSeed/tm1gitpy"
Repository = "https://github.com/KnowledgeSeed/tm1gitpy"
Issues = "https://github.com/KnowledgeSeed/tm1gitpy/issues"
Changelog = "https://github.com/KnowledgeSeed/tm1gitpy/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "testcontainers>=4.0.0",
    "pyinstaller>=6.0",
    "orjson",
    "ijson",
    "cffi",
    "tqdm",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.dynamic]
version = { attr = "tm1_git_py.__version__" }

[tool.setuptools.package-data]
"tm1_git_py" = ["*.txt", "*.json"]
